# django-orghierarchy

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  release-please.yml  release.yml  staging.yml
django_orghierarchy/: __init__.py  admin.py  api.py  apps.py  forms.py  importers.py  models.py  utils.py
django_orghierarchy/locale/fi/LC_MESSAGES/: django.po
django_orghierarchy/management/commands/: generate_distinct_org_names.py  import_organizations.py  rest_import.py
django_orghierarchy/migrations/: 0001_initial.py  0002_organization_replaced_by.py  0002_organization_responsible_organization.py  0003_fields_update.py  0003_rm_responsible_org_add_internal_type.py  0004_add_affiliated_org_permissions.py  0005_add_fields_to_organization_class.py  0006_add_user_editable_to_data_source.py  0007_add_abbreviation_field.py  0007_set_editable_false_on_mptt_fields.py  0008_modify_organization_on_deletes.py  0008_set_on_delete_attributes.py  0009_add_change_organization_regular_users_permission.py  0009_add_organization_distinct_name.py  0010_rename_user_editable.py  0010_update_tree_fields.py  0011_alter_datasource_user_editable_organizations.py  0012_alter_organization_unique_together_and_more.py  0013_add_organization_indexes.py
django_orghierarchy/static/django_orghierarchy/css/: admin.css
django_orghierarchy/static/django_orghierarchy/js/: admin.js
tests/: factories.py  settings.py  test_admin.py  test_api.py  test_commands.py  test_forms.py  test_importers.py  test_importers_openahjo.py  test_models.py  test_utils.py  urls.py  utils.py
tests/test_app/: __init__.py  apps.py  models.py  settings_custom_ds.py  settings_custom_pk_ds.py
tests/test_app/migrations/: 0001_initial.py  0002_customdatasource_user_editable_organizations.py
tests/test_app/tests/: test_custom_data_source.py  test_custom_pk_data_source.py
