[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-orghierarchy"
version = "0.6.2"
requires-python = ">=3.10"
description = "Reusable Django application for hierarchical organizations."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "City of Helsinki", email = "dev@hel.fi"},
]
dependencies = [
    "Django>=4.2",
    "django-mptt",
    "djangorestframework",
    "requests",
    "swapper",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-orghierarchy"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE"
addopts = "-m \"not integration_test\""
markers = [
    "custom_ds: integration tests for custom data source",
    "custom_pk_ds: integration tests for custom primary key data source",
    "integration_test: integration tests"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]
extend-per-file-ignores = { "**/migrations/*" = ["E501"], "**/tests/*" = ["E501"] }
