[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-orghierarchy"
version = "0.6.2"
requires-python = ">=3.10"
description = "Reusable Django application for hierarchical organizations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "City of Helsinki", email = "dev@hel.fi"},
]
keywords = [
    "django",
]
dependencies = [
    "Django>=5.2",
    "django-mptt",
    "djangorestframework",
    "requests",
    "swapper",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
test = [
    "coverage",
    "factory-boy",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "requests-mock",
]
all = ["django-orghierarchy[test]"]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-orghierarchy"
Issues = "https://github.com/City-of-Helsinki/django-orghierarchy/issues"

[tool.coverage.run]
source = ["django_orghierarchy"]
omit = ["**/migrations/*"]
parallel = true

[tool.hatch.build.targets.wheel]
packages = ["django_orghierarchy"]

[tool.hatch.envs.default]
dependencies = [
    "pre-commit",
]
features = ["all"]
python = "3.10"

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = [
    "pre-commit install",
    "pre-commit run -a",
]
manage = "tests/manage.py {args}"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
features = ["all"]
matrix-name-format = "dj{value}"
parallel = false
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
django = ["5.2"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]
django = ["6.0"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "./tests/manage.py makemigrations --check",
    "pytest{env:HATCH_TEST_ARGS:} {args}",
    "pytest -m custom_ds --ds=tests.test_app.settings_custom_ds {args}",
    "pytest -m custom_pk_ds --ds=tests.test_app.settings_custom_pk_ds {args}",
]
run-cov = [
    "./tests/manage.py makemigrations --check",
    "pytest --cov{env:HATCH_TEST_ARGS:} {args}",
    "pytest -m custom_ds --ds=tests.test_app.settings_custom_ds {args}",
    "pytest -m custom_pk_ds --ds=tests.test_app.settings_custom_pk_ds {args}",
]
cov-combine = "coverage combine"
cov-report = [
    "coverage report",
    "coverage xml",
]

[tool.hatch.envs.hatch-uv]
dependencies = [
  "uv>=0.11.0",
]
[tool.uv]
exclude-newer = "14 days"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE"
addopts = "-m \"not integration_test\""
markers = [
    "custom_ds: integration tests for custom data source",
    "custom_pk_ds: integration tests for custom primary key data source",
    "integration_test: integration tests"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]
extend-per-file-ignores = { "**/migrations/*" = ["E501"], "**/tests/*" = ["E501"] }
